Start of build with db manager
